--- a/payments-application/pom.xml
+++ b/payments-application/pom.xml
@@ -17,6 +17,7 @@
         <dependency>
             <groupId>com.abraham</groupId>
             <artifactId>payments-domain</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
