--- a/payments-event/pom.xml
+++ b/payments-event/pom.xml
@@ -17,6 +17,18 @@
         <dependency>
             <groupId>com.abraham</groupId>
             <artifactId>payments-application</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-binder-kafka</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-test-support</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
