Third-party validation integration

--- a/payments-boot/src/main/resources/application.yml
+++ b/payments-boot/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 logging:
   level:
     root: INFO
-    org.springframework.cloud.function: DEBUG
+    com.abraham.payments: DEBUG
 
 spring:
   datasource:
