--- a/payments-boot/pom.xml
+++ b/payments-boot/pom.xml
@@ -24,6 +24,23 @@
             <artifactId>payments-infrastructure</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.0.204</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- For spring cloud integration testing relying on binder as stated here:
+        https://docs.spring.io/spring-cloud-stream/docs/current/reference/html/spring-cloud-stream.html#_testing -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+            <classifier>test-binder</classifier>
+        </dependency>
     </dependencies>
 
     <build>
@@ -31,9 +48,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>com.abraham.payments.Application</mainClass>
-                </configuration>
             </plugin>
         </plugins>
     </build>
