Transaction management support

--- a/payments-infrastructure/pom.xml
+++ b/payments-infrastructure/pom.xml
@@ -19,7 +19,7 @@
             <artifactId>payments-application</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!-- Even though I am not using the reactive aproach, I need this dependency to use WebClient, since
+        <!-- Even though I am not using the reactive approach, I need this dependency to use WebClient, since
         RestTemplate class is in maintenance mode and WebClient should be used -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
